--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,48 @@
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+    width: 100%;
+    color: white;
+    background-color: rgb(131, 22, 158);
+    text-align: center;
+    align-content: center;
 }
 
-
-
-ol, ul {
-    padding-left: 30px;
-}
-
-board-row:after {
-    clear: both;
-    content: "";
-    display: table;
-}
-
-.status {
+.container {
+    text-align: center;
+    align-content: center;
     margin-bottom: 10px;
 }
 
-.square {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
+.title {
+    padding-top: 10px;
+    font-size: xx-large;
+}
+
+.status {
+    color: white;
+    margin-bottom: 10px;
+    font-size: x-large;
+}
+
+.board {
+    margin-bottom: 15px;
+    text-align: center;
+    align-content: center;
+    margin-bottom: 10px;
+    padding-right: 10px;
+}
+
+.box {
+    color: #424242;
+    background-color: rgb(131, 22, 158);
+    border: 5px solid #00897b;
+    float: inline-end;
+    font-size: 96px;
     font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
+    line-height: 136px;
+    height: 136px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 136px;
+    color: white;
 }
-
-.square:focus {
-    outline: none;
-}
-
-.kbd-navigation .square:focus {
-    background: #ddd;
-}
-
-.game {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-
-.game-info {
-    margin-left: 20px;
-}
-
-.restart {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: left;
-    margin: 2px;
-  }
